fix: description overflowing table cell

--- a/webui/react/src/components/InteractiveTable.module.scss
+++ b/webui/react/src/components/InteractiveTable.module.scss
@@ -79,10 +79,17 @@
   }
 }
 .cell {
+    background: var(--theme-surface-weak) !important;
+
   .rightClickableCellWrapper {
     display: inline;
   }
 }
+
+:global(td.ant-table-column-sort) {
+  background: var(--theme-surface) !important; 
+}
+
 .headerFilterOn {
   :global(.ant-table-filter-column .ant-table-filter-trigger) {
     color: var(--theme-status-active);
